with SVM learning

--- a/notebooks/DTA _first.ipynb
+++ b/notebooks/DTA _first.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "\n",
     "# !pip install pandasql\n",
     "import pandasql as ps\n",
-    "import math"
+    "import math\n"
    ]
   },
   {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "(85509, 33)"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,21 +48,200 @@
     "    encoding=\"latin-1\",\n",
     "    usecols=range(33),\n",
     ")\n",
+    "\n",
     "big_stat_df_with_nan.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(85509, 33)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>match_num</th>\n",
+       "      <th>w_p1_age</th>\n",
+       "      <th>w_p1_hgt</th>\n",
+       "      <th>w_p2_age</th>\n",
+       "      <th>w_p2_hgt</th>\n",
+       "      <th>l_p1_age</th>\n",
+       "      <th>l_p1_hgt</th>\n",
+       "      <th>l_p2_age</th>\n",
+       "      <th>l_p2_hgt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>85509.000000</td>\n",
+       "      <td>85509.000000</td>\n",
+       "      <td>84952.000000</td>\n",
+       "      <td>79473.000000</td>\n",
+       "      <td>84896.000000</td>\n",
+       "      <td>79436.000000</td>\n",
+       "      <td>84171.000000</td>\n",
+       "      <td>76074.000000</td>\n",
+       "      <td>84216.000000</td>\n",
+       "      <td>76070.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2011.414646</td>\n",
+       "      <td>30.644938</td>\n",
+       "      <td>28.649408</td>\n",
+       "      <td>73.713123</td>\n",
+       "      <td>28.723888</td>\n",
+       "      <td>73.757201</td>\n",
+       "      <td>28.284707</td>\n",
+       "      <td>73.407248</td>\n",
+       "      <td>28.289477</td>\n",
+       "      <td>73.534008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>6.167684</td>\n",
+       "      <td>23.230959</td>\n",
+       "      <td>5.134631</td>\n",
+       "      <td>3.640063</td>\n",
+       "      <td>4.921265</td>\n",
+       "      <td>3.682851</td>\n",
+       "      <td>5.343910</td>\n",
+       "      <td>3.633304</td>\n",
+       "      <td>5.190864</td>\n",
+       "      <td>3.651696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2000.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>13.549623</td>\n",
+       "      <td>63.000000</td>\n",
+       "      <td>13.412731</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>-1.284052</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>13.412731</td>\n",
+       "      <td>61.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2006.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>24.892539</td>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>25.163587</td>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>24.432580</td>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>24.555784</td>\n",
+       "      <td>71.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2010.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>28.254620</td>\n",
+       "      <td>74.000000</td>\n",
+       "      <td>28.454483</td>\n",
+       "      <td>74.000000</td>\n",
+       "      <td>27.874059</td>\n",
+       "      <td>73.000000</td>\n",
+       "      <td>27.923340</td>\n",
+       "      <td>74.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2017.000000</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>76.000000</td>\n",
+       "      <td>31.895962</td>\n",
+       "      <td>76.000000</td>\n",
+       "      <td>31.694730</td>\n",
+       "      <td>76.000000</td>\n",
+       "      <td>31.550992</td>\n",
+       "      <td>76.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2022.000000</td>\n",
+       "      <td>137.000000</td>\n",
+       "      <td>59.860370</td>\n",
+       "      <td>85.000000</td>\n",
+       "      <td>52.399726</td>\n",
+       "      <td>85.000000</td>\n",
+       "      <td>63.865845</td>\n",
+       "      <td>85.000000</td>\n",
+       "      <td>67.764545</td>\n",
+       "      <td>85.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               year     match_num      w_p1_age      w_p1_hgt      w_p2_age  \\\n",
+       "count  85509.000000  85509.000000  84952.000000  79473.000000  84896.000000   \n",
+       "mean    2011.414646     30.644938     28.649408     73.713123     28.723888   \n",
+       "std        6.167684     23.230959      5.134631      3.640063      4.921265   \n",
+       "min     2000.000000      1.000000     13.549623     63.000000     13.412731   \n",
+       "25%     2006.000000     12.000000     24.892539     71.000000     25.163587   \n",
+       "50%     2010.000000     26.000000     28.254620     74.000000     28.454483   \n",
+       "75%     2017.000000     45.000000     32.000000     76.000000     31.895962   \n",
+       "max     2022.000000    137.000000     59.860370     85.000000     52.399726   \n",
+       "\n",
+       "           w_p2_hgt      l_p1_age      l_p1_hgt      l_p2_age      l_p2_hgt  \n",
+       "count  79436.000000  84171.000000  76074.000000  84216.000000  76070.000000  \n",
+       "mean      73.757201     28.284707     73.407248     28.289477     73.534008  \n",
+       "std        3.682851      5.343910      3.633304      5.190864      3.651696  \n",
+       "min       61.000000     -1.284052     61.000000     13.412731     61.000000  \n",
+       "25%       71.000000     24.432580     71.000000     24.555784     71.000000  \n",
+       "50%       74.000000     27.874059     73.000000     27.923340     74.000000  \n",
+       "75%       76.000000     31.694730     76.000000     31.550992     76.000000  \n",
+       "max       85.000000     63.865845     85.000000     67.764545     85.000000  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "big_stat_df = big_stat_df_with_nan.dropna(axis=0, thresh=5)\n"
+    "big_stat_df = big_stat_df_with_nan.dropna(axis=0, thresh=5)\n",
+    "print(big_stat_df.shape)\n",
+    "big_stat_df.describe()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,12 +254,12 @@
     "big_stat_df.loc[big_stat_df[\"l_player2\"] == name, \"l_p2_hgt\"] = hgt\n",
     "\n",
     "big_stat_df.loc[big_stat_df[\"l_player1\"] == name, \"l_p1_birthdate\"] = dob\n",
-    "big_stat_df.loc[big_stat_df[\"l_player2\"] == name, \"l_p2_birthdate\"] = dob\n"
+    "big_stat_df.loc[big_stat_df[\"l_player2\"] == name, \"l_p2_birthdate\"] = dob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +332,7 @@
        "53238  Grigorii Voleanin      77.0     1967-04-01"
       ]
      },
-     "execution_count": 326,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +340,7 @@
    "source": [
     "big_stat_df[big_stat_df[\"l_player2\"] == name][\n",
     "    [\"l_player2\", \"l_p2_hgt\", \"l_p2_birthdate\"]\n",
-    "]\n"
+    "]"
    ]
   },
   {
@@ -245,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +710,7 @@
        "max        37.000000    420.000000  78392.000000      NaN  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +719,7 @@
     "## get all scraped data - will be based on this and update it with data from\n",
     "allplayers_df = pd.read_csv(\"./data/allplayers.csv\")\n",
     "# transform height\n",
-    "allplayers_df.describe(include=\"all\")\n"
+    "allplayers_df.describe(include=\"all\")"
    ]
   },
   {
